forgot to commit

--- a/templates/home.tmpl
+++ b/templates/home.tmpl
@@ -13,6 +13,7 @@ We have a range of venues for conferences in some of the nicest places in the wo
        <p>You are not signed in as a developer.</p>
     {{end}}
     <p><a href="{{$.LogoutURL}}">Log Out</a></p>
+    <p><a href="/calendarinfo">Calendar info</a></p>
   {{else}}
     <p>Please <a href="{{.LoginURL}}">Sign In</a></p>
   {{end}}
