--- a/templates/user_profile.tmpl
+++ b/templates/user_profile.tmpl
@@ -1,14 +1,21 @@
+<!--
+  Copyright 2013 The Go Authors. All rights reserved.
+  Use of this source code is governed by a BSD-style
+  license that can be found in the LICENSE file.
+-->
+
 {{define "userprofile"}}
 
 <h1>{{.Heading}} User Profile</h1>
 
-{{with .Data.RegisteredConfs}}
-  <h3>You are registered to attend the following conferences:</h3>
-  {{range .}}
-    <p> {{.Name}} in {{.City}} on {{.StartDate}} </p>
-  {{end}}
-  <hr>
+<h3>You are registered to attend the following conferences:</h3>
+{{range .Data.Tickets}}
+  <p>{{.ConfName}}</p>
+{{else}}
+  <p>The list is empty!</p>
 {{end}}
+<hr>
+
 
 {{with .Data}}
 <p><b>Your main email is: </b> {{.MainEmail}}</p> 
