--- a/app/templates/email.tmpl
+++ b/app/templates/email.tmpl
@@ -1,7 +1,7 @@
 Hi!
 
 We want to let you know that a conference called {{.Name}} has been
-scheduled to start on {{.Format "2006-01-02"}} in {{.City}}.
+scheduled to start on {{.StartDate.Format "2006-01-02"}} in {{.City}}.
 
 We thought you would like to know because you are interested in
 conferences about {{.Topic}}.
